--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,31 @@
     width: 600px;
     height: auto;
 }
+
+h1 {
+    margin-top: 60px;
+    margin-bottom: -10px;
+    font-weight: bold;
+    font-size: xx-large;
+}
+
+.DerrickDescription {
+    margin-bottom: 20px;
+    font-style: italic;
+    padding-left: 40px;
+    font-size: small;
+}
+
+.TopLinks {
+    display: flex;
+}
+
+.TopLinks div {
+    background: lightblue;
+    padding: 50px;
+    border: 2px solid blue;
+    font-weight: bold;
+    flex: 1;
+    
+
+}
