--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,16 @@ p {
     background: lightslategrey;
     background-image: url(https://d1csarkz8obe9u.cloudfront.net/posterpreviews/top-10-best-golden-podium-award-background-design-template-ee7293ab869115d9d5bbbdda42d21899_screen.jpg?ts=1627001469);
     background-size: contain;
+    display: block;
+
     
 }
+
+.TopLinks a:hover{
+   background-color: lightblue; 
+}
+
+
 .TopLinks .StartSits {
 
     background: lightblue;
@@ -58,3 +66,4 @@ p {
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/8/85/Casino-gambling.svg);
     background-size: cover;
 }
+
