Changed background for rankings and fixed best-bets html

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ p {
 
 .TopLinks .Rankings{
     background: lightslategrey;
-    background-image: url(https://d1csarkz8obe9u.cloudfront.net/posterpreviews/top-10-best-golden-podium-award-background-design-template-ee7293ab869115d9d5bbbdda42d21899_screen.jpg?ts=1627001469);
+    background-image: url(https://www.gutmicrobiotaforhealth.com/wp-content/uploads/2015/12/top10.png);
     background-size: contain;
     display: block;
 
